[install_static] GetCollectStatsConsentImpl() not returning true early

...when reporting policy enforced.

R=robertshield@chromium.org
BUG=641540

Review-Url: https://codereview.chromium.org/2282143002
Cr-Commit-Position: refs/heads/master@{#415185}

Former-commit-id: cacf882777a38c292f82e5b90229bb0b24c9746f